Fixed whitespace, improved footer

--- a/src/Components/Footer/FooterComponent.scss
+++ b/src/Components/Footer/FooterComponent.scss
@@ -24,3 +24,12 @@
         cursor: pointer;
     }
 }
+
+@media(max-width: 992px){
+    .footer{
+        height: 90px;
+    }
+    .footer-text{
+        font-size: 12px;
+    }
+}
