--- a/src/Components/Home/HomeComponent.scss
+++ b/src/Components/Home/HomeComponent.scss
@@ -22,6 +22,13 @@
     }
     .jumbotron{
         padding-top: 5%;
-    }}
+    }
+}
+
 .jumbotron {
-    background: lightblue url("../../images/9.png") no-repeat fixed center center; }
+    background: lightblue url("../../images/9.png") no-repeat fixed center center; 
+}
+
+.headerrow{
+    margin: 0 0 0 0 !important; 
+}
